Pull up following revision(s) (requested by drochner in ticket #541): 	sys/uvm/uvm_page.c: revision 1.143 -fix two conditions where PQ_FREE was still/already set while the page  was not anymore/yet on the freelist and uvm_fpageqlock was not held -clear PQ_FREE while the page is in the works of pageidlezero This avoids that the DMA memory allocator (pglistalloc) grabs a page which is not on the freelist, leading to a diagnostic panic (with DEBUG) or freelist corruption. (mostly on X server activation after a VT switch or suspend/resume because this can allocate megabytes of AGP memory) This might fix PR port-i386/38989 by Alan Barrett (in case this was a multiprocessor).